syntax = "proto3";

package mcp.orchestrator.v1;

import "common.proto";

message CreateMcpTemplateRequest {
  string name = 1;
  string image = 2;
  repeated string command = 3;
  repeated string args = 4;
  repeated EnvVar env_vars = 5;
  string resource_limit_name = 6;
  repeated VolumeMount volume_mounts = 7;
  optional string namespace = 8;
  map<string, string> labels = 9;
}

message GetMcpTemplateRequest {
  string id = 1;
}

message ListMcpTemplatesRequest {
  optional string namespace = 1;
  map<string, string> label_selector = 2;
  int32 page_size = 3;
  string page_token = 4;
}

message ListMcpTemplatesResponse {
  repeated McpTemplateResponse templates = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

message DeleteMcpTemplateRequest {
  string id = 1;
}

message DeleteMcpTemplateResponse {
  bool success = 1;
  string message = 2;
}

message McpTemplateResponse {
  string id = 1;
  string name = 2;
  string namespace = 3;
  string image = 4;
  repeated string command = 5;
  repeated string args = 6;
  repeated EnvVar env_vars = 7;
  string resource_limit_name = 8;
  repeated VolumeMount volume_mounts = 9;
  map<string, string> labels = 10;
  int64 created_at = 11;
}
